Fix alignment of greeting in top right corner of site.

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -65,10 +65,12 @@ body {
 
 #greeting {
   float: right;
+  height: 20px;
+  margin: 0px;
   padding-right: 10px;
-  padding-top: 2px;
-  padding-bottom: 3px;
+  padding-top: 5px;
   font-size: 13px;
+  line-height: 14px;
   background: url('/images/tab_bottom.gif') repeat-x bottom;
 }
 
@@ -257,7 +259,7 @@ hides rule from IE5-Mac \*/
 #tabnav
 {
   height: 20px;
-  margin: 0;
+  margin: 0px;
   padding-left: 215px;
   padding-top: 5px;
   background: url('/images/tab_bottom.gif') repeat-x bottom;
